--- a/process/Code review process.asciidoc
+++ b/process/Code review process.asciidoc
@@ -40,14 +40,14 @@ in the "LICENSE" file.
 
 :numbered:
 == Introduction
-The plaso review process was in need of some revision to allow us to use the 
+The plaso review process was in need of some revision to allow us to use the
 continuous integration (CI) testing functionality of github.
 
 == Code review process - version 1
-In the first version of the plaso code review process we used Rietveld 
-(codereview.appspot.com) for code reviews. Rietveld provides a Python script 
-named upload.py to upload code diffs to codereview.appspot.com. Though it has 
-git support, Rietveld was build around svn and therefore does not entirely 
+In the first version of the plaso code review process we used Rietveld
+(codereview.appspot.com) for code reviews. Rietveld provides a Python script
+named upload.py to upload code diffs to codereview.appspot.com. Though it has
+git support, Rietveld was build around svn and therefore does not entirely
 match a git-based workflow.
 
 Several utility scripts have been built around upload.py to make the code
@@ -79,7 +79,7 @@ So decision to stick with Rietveld and fake integrations.
 * Step 1 - set up your personal fork
 
 === Step 1 - set up your personal fork
-The first step to contributing to one of the log2timeline projects is to set up 
+The first step to contributing to one of the log2timeline projects is to set up
 your personal fork.
 
 To set up a personal fork:
@@ -109,7 +109,145 @@ git config --global push.default matching
 
 `5`. Make sure `.netrc` is configured
 
+=== Step 2 - Starting a new feature branch
+Every code change is stored in a separate feature branch:
+
+image:https://docs.google.com/drawings/d/1UoE1eYii-9ofnyuqG0ZtB67WpL4xYA3NMJ0IkRRWoCA/pub?w=960&h=720[Step 2]
+
+`1.` Make sure the master branch of your fork is synced with upstream:
+....
+git checkout master && git fetch upstream && git pull --rebase upstream master && git push -f
+....
+
+`2.` Create a feature branch:
+....
+git checkout -b feature
+....
+
+`3.` Make the necessary code changes, commit them to your feature branch and upload them to your fork:
+....
+git push --set-upstream origin feature
+....
+
+=== Step 3 - Making changes
+Make your changes to the code and make sure to up them to the feature branch of
+your fork.
+
+Commit all code changes to your feature branch and upload them:
+....
+git push
+....
+
+=== Step 4 - Starting a code review
+Once you think your changes are ready, you start the review process.
+
+image:https://docs.google.com/drawings/d/19cuQJOD7vK6EsBpW7SpyD6It3xtnYPhCdMHqaxOkgSg/pub?w=960&h=720[Step 3]
+
+`1.` Commit all code changes and upload them:
+....
+git push
+....
+
+`2.` Run the review script to create a new code review:
+....
+./utils/review.py create
+....
+
+* run the linter
+* run the unit tests
+* check if your local clone is up to date with the upstream master and update
+if necessary by running: `git pull --rebase upstream master`
+* upload the diff with upstream master to codereview.appspot.com
+* create a github pull request (PR)
+* mail the maintainers
+* create a review file in `./reviews/`
+
+[NOTE]
+The diff sent to codereview.appspot.com is relative to the state of
+upstream/master in your local git repository. The review script will run
+`git fetch upstream` to make sure the state is up to date. An alternative
+diffbase can be define by specifying the `--diffbase` parameter e.g.
+`./utils/review.py --diffbase=origin/feature create`.
+
+`3.` The pull request will trigger automated testing. You can see the status of
+your pull request on the plaso project site:
+https://github.com/log2timeline/plaso/pulls
+
+=== Step 5 - Code review
+The code reviewer will:
+
+* check the status of the pull request on the github project page e.g.
+https://github.com/log2timeline/plaso/pull/
+
+If tests are broken (and it is due to the CL) the reviewer will ask the
+contributor fix this.
+
+* comment on the changes on: https://codereview.appspot.com/[codereview.appspot.com]
+
+=== Step 6 - Updating a code review
+The process of updating a code reviews is very similar to that of starting a
+code review.
+
+`1.` Commit all code changes and upload them:
+....
+git push
+....
+
+`2.` Run the review script to update the code review:
+....
+./utils/review.py update
+....
+
+`3.` Any update to the feature branch while there is a PR will trigger the
+automated testing.
+
+=== Step 7 - Merging the code review with upstream
+After the review is done the reviewer will merge the CL and submit it to upstream.
+
+image:https://docs.google.com/drawings/d/1KpX22NbgTLp6NFkrAUGppFajI4MTkrACUbiEAOO4Vv4/pub?w=960&h=720[Step 7]
+
+`1.` Run the review script to merge the code review:
+....
+./utils/review.py merge CODEREVIEW ORGANIZATION:BRANCH
+....
+
+Where:
+
+* `CODEREVIEW` is the code review (CR) or change list (CL) on
+codereview.appspot.com
+* `ORGANIZATION:BRANCH` is the github organization, typically the username, and
+the name of the feature branch
+
+*TODO decribe the steps merge takes*
+
+....
+git pull --squash https://github.com/$USERNAME/plaso.git $BRANCH
+....
+
+=== Step 8 - Closing a code review
+After the CL has been merged the contributor can remove the feature branch and close the codereview.
+
+image:https://docs.google.com/drawings/d/1XV0oxJDlJ8b6k7WLT8CrxHt39dYWS72u7M2bzAQnrEM/pub?w=960&h=720[Step 8]
+
+`1.` Run the review script to close the code review:
+....
+./utils/review.py close BRANCH
+....
+
+Where:
+
+* `BRANCH` is the name of the feature branch
+
+*TODO decribe the steps close takes*
+....
+Remove the feature branch from the local clone and the fork
+Removes ./reviews/CL
+Closes the PR
+Close the code review on Rietveld
+....
+
 :numbered!:
 [appendix]
-== Appendix
+== Review file
+*TODO describe the review file format*
 
