--- a/process/Code review process.asciidoc
+++ b/process/Code review process.asciidoc
@@ -49,7 +49,7 @@ your personal fork.
 
 To set up a personal fork:
 
-image:https://docs.google.com/drawings/d/1QByAJgaBc5IVUfTsXcNnHImUqO0RidaBfnJMzNTSR3M/pub?w=961&h=384[Step 1]
+image:https://raw.githubusercontent.com/log2timeline/l2tdocs/master/images/Code%20review%20-%20step%201.png[Step 1]
 
 `1`. In github go to e.g.: https://github.com/log2timeline/plaso and select
 "fork". This will create your personal fork.
@@ -78,7 +78,7 @@ https://gist.github.com/technoweenie/1072829
 === Step 2 - Start a new feature branch
 Every code change is stored in a separate feature branch:
 
-image:https://docs.google.com/drawings/d/1UoE1eYii-9ofnyuqG0ZtB67WpL4xYA3NMJ0IkRRWoCA/pub?w=960&h=720[Step 2]
+image:https://raw.githubusercontent.com/log2timeline/l2tdocs/master/images/Code%20review%20-%20step%202.png[Step 2]
 
 `1.` Make sure the master branch of your fork is synced with upstream:
 ....
@@ -107,7 +107,7 @@ git push
 === Step 4 - Start a code review
 Once you think your changes are ready, you start the review process.
 
-image:https://docs.google.com/drawings/d/19cuQJOD7vK6EsBpW7SpyD6It3xtnYPhCdMHqaxOkgSg/pub?w=960&h=720[Step 3]
+image:https://raw.githubusercontent.com/log2timeline/l2tdocs/master/images/Code%20review%20-%20step%203.png[Step 3]
 
 `1.` Commit all code changes and upload them:
 ....
@@ -186,7 +186,7 @@ After the review is done the reviewer will merge the CL and submit it to upstrea
 [NOTE]
 Only project maintainers need to perform this step.
 
-image:https://docs.google.com/drawings/d/1KpX22NbgTLp6NFkrAUGppFajI4MTkrACUbiEAOO4Vv4/pub?w=960&h=720[Step 7]
+image:https://raw.githubusercontent.com/log2timeline/l2tdocs/master/images/Code%20review%20-%20step%207.png[Step 7]
 
 `1.` Run the review script to merge the code review:
 ....
@@ -216,7 +216,7 @@ changes to upstream
 === Step 8 - Closing a code review
 After the CL has been merged the contributor can remove the feature branch and close the codereview.
 
-image:https://docs.google.com/drawings/d/1XV0oxJDlJ8b6k7WLT8CrxHt39dYWS72u7M2bzAQnrEM/pub?w=960&h=720[Step 8]
+image:https://raw.githubusercontent.com/log2timeline/l2tdocs/master/images/Code%20review%20-%20step%208.png[Step 8]
 
 `1.` Run the review script to close the code review:
 ....
