--- a/process/Code review process.asciidoc
+++ b/process/Code review process.asciidoc
@@ -75,13 +75,44 @@ git push
 ....
 
 === Step 4 - Start a code review
-Once you think your changes are ready, you start the review process. There are a few different choices:
+Once you think your changes are ready, you start the review process. There are two options to start a code review on Github:
 
-* https://github.com/log2timeline/l2tdocs/blob/master/process/Github%20code%20review.md[Github]
-* https://github.com/log2timeline/l2tdocs/blob/master/process/Rietveld%20code%20review.asciidoc[Rietveld (codereview.appspot.com)]
+=== Option 1: Create a pull request using the Github web UI
+This process is documented by Github [here](https://help.github.com/articles/creating-a-pull-request/).
+Once this is done, request a review from one of the project maintainers, as documented by
+Github [here](https://help.github.com/articles/requesting-a-pull-request-review/).
+
+If you don't know who to request, use the reviewer suggested by Github.
+
+=== Option 2: Use the review.py script from l2tdevtools:
+Check out the l2tdevtools repository
+`git clone https://github.com/log2timeline/l2tdevtools.git`
+
+Run the review.py script with the create-pr option:
+```
+PYTHONPATH=./l2tdevtools python ./l2tdevtools/tools/review.py --project_path=/path/to/the/project create-pr
+```
+
+=== Step 5 - Status checks
+Once your pull request has been created, automated checkers will run to on your changes to check for mistakes, or code
+that doesn't match the style guide. Review the [output from the tools](https://help.github.com/articles/about-status-checks/),
+and make sure your pull request passes.
+
+Your pull request [can't be merged](https://help.github.com/articles/about-required-status-checks/) until the checkers
+report everything is OK.
+
+=== Step 6 - Making changes after reviews
+Your pull request will be [assigned](https://help.github.com/articles/assigning-issues-and-pull-requests-to-other-github-users/)
+to a project maintainer either by the script or the reviewer. The maintainer will review your code, and may push some
+changes to your branch and/or request that you make changes. If they do make changes, make sure your local copy of the
+branch (`git pull`) before making further changes.
+
+After they've reviewed your code, make any necessary changes, and push them to your feature branch. After that, reply to the comments made by the
+reviewer, then [request a new review](https://help.github.com/articles/requesting-a-pull-request-review/) from the same reviewer.
 
 === Step 5 - Merging
-Once the review is complete, the project maintainer reviewing the change will merge it into the code repository.
+Once the pull request assignee is happy with your propopsed changes, and all the status checks have passed, they'll
+merge your pull request into the project. Once that's completed, you can delete your feature branch.
 
 [preface]
 == Document information
@@ -97,7 +128,7 @@ Once the review is complete, the project maintainer reviewing the change will me
 [preface]
 == License
 ....
-Copyright (C) 2016, log2timeline projects maintainers <log2timeline-maintainers@googlegroups.com>
+Copyright (C) 2016-2018, log2timeline projects maintainers <log2timeline-maintainers@googlegroups.com>
 Permission is granted to copy, distribute and/or modify this document under the
 terms of the GNU Free Documentation License, Version 1.3 or any later version
 published by the Free Software Foundation; with no Invariant Sections, no
@@ -111,4 +142,5 @@ in the "LICENSE" file.
 |===
 | Version | Author | Date | Comments
 | 0.0.1 | Joachim Metz | January 2016 | Initial version based on template.
+| 0.0.2 | Daniel White | July 2018 | Updates for GitHub code review.
 |===
